--- a/public/css/frontend/style.css
+++ b/public/css/frontend/style.css
@@ -304,7 +304,6 @@ input[type="radio"]:checked + label span::before {
 .owl-carousel .owl-nav .owl-prev,
 .owl-carousel .owl-nav .owl-next {
     color: #fff;
-    font-size: 25px;
     height: 50px;
     line-height: 48px;
     position: absolute;
@@ -315,7 +314,13 @@ input[type="radio"]:checked + label span::before {
     -ms-transform: translateY(-50%);
     -o-transform: translateY(-50%);
     transform: translateY(-50%);
+    background-color: transparent;
+    font-size: 50px;
+    text-shadow: 1px 2px 4px #303030;
+    /*
     background: #742b96;
+    font-size: 25px;
+    */
 }
 .owl-carousel .owl-nav .owl-prev {
     left:50px;
@@ -460,6 +465,12 @@ section {
   color: #ffffff;
   
 }
+.btn.btn-outline{
+  background-color: transparent;
+   border-color: #fff;
+  padding: 8px 18px;
+  color: #fff;
+}
 .no-bg{
     background: none !important;
     color: #6c6868 !important;
@@ -486,6 +497,9 @@ section {
 }
 .mb20{
     margin-bottom: 20px;
+}
+.mt20{
+    margin-top: 20px;
 }
 .mt30{
     margin-top: 30px;
@@ -565,9 +579,9 @@ section {
 .header-wrapper {
     background: #742b96;
 }
-.top-header {
+/* .top-header {
     padding: 0 0 8px;
-}
+} */
 .top-header .container .row {
     border-bottom: 1px solid #902dbe;
 }
@@ -577,7 +591,7 @@ section {
 }
 .hover-dropdown{
     margin-bottom: 0;
-    line-height: 35px;
+    line-height: 30px;
 }
 .dropdown.topnav-rgt {
     position: relative;
@@ -643,7 +657,7 @@ section {
 .dropdown .dropdown-content li:first-child a { border-top: medium none; }
 .dropdown .dropdown-content li a:hover{ color: #742b96; }
 .mid-header {
-    padding: 20px 0;
+    padding: 15px 0;
 }
 .mid-header .logo {
     width: 15%;
@@ -675,7 +689,8 @@ section {
   border-radius: 3px 0 0 3px; 
   cursor: pointer;
   height: 40px; 
-  color: #d5d5d5; 
+  background-color: #fff;
+  color: #a8a8a8; 
 }
 .search-box .SumoSelect > .CaptionCont::after {
   content: "\f100";
@@ -896,6 +911,7 @@ section {
     border: medium none;
     border-radius: 0;
     margin-bottom: 0;
+    min-height: 40px;
 }
 .main-header section, .main-header section section{
     padding-top: 0;
@@ -927,7 +943,8 @@ nav{
 }
 .header-wrapper .navbar li a {
     text-transform: capitalize;
-    padding: 15px;
+    padding: 10px 15px;
+    font-size: 16px;
 }
 .header-wrapper .submenu-container{
     border: 1px solid #ccc;
@@ -978,7 +995,7 @@ nav{
   background: #ffffff;
   padding: 2rem 1rem 1rem;
   z-index: 1001;
-  top: 50px;
+  top: 40px;
   opacity: 0;
   visibility: hidden;
     
@@ -1090,7 +1107,7 @@ nav{
 -------------------------------*/
 .banner-wrapper .item,
 .advertisement {
-    min-height: 390px;
+    min-height: 330px;
 }
 .banner-wrapper .owl-dots {
   left: 0;
@@ -1267,9 +1284,10 @@ nav{
   margin-bottom: 5px;
 }
 .thumbnail .caption h3{
-  color: #666;
-    font-weight: 300;
-    font-size: 15px;
+    color: #666;
+    /* font-weight: 300; */
+    /* font-size: 15px; */
+    font-size: 16px;
     text-transform: capitalize;
     margin-top: 0;
     margin-bottom: 5px;
@@ -1278,12 +1296,13 @@ nav{
     color: #333;
 }
 .thumbnail .caption .old{
-  font-size: 11.5px;
-  color: #ccc;
+  font-size: 13px;
+  color: #acacac;
+  /* color: #ccc; */
 }
 .thumbnail .caption .price{
-    font-size: 13px;
-    color: #333;
+    /*font-size: 13px;*/
+     color: #333; 
 }
 
 .action {
@@ -1376,7 +1395,7 @@ custom owl controls
   margin: 0 -10px;
 }
 .brand-list li {
-  background: #fff none repeat scroll 0 0;
+  /* background: #fff none repeat scroll 0 0; */
   margin-bottom: 20px;
   margin-left: 10px;
   margin-right: 10px;
@@ -1386,11 +1405,13 @@ custom owl controls
 }
 .brand-list li a{
     display: block;
-    line-height: 105px;
+    height: 105px;
+    background-color: #fff;
 }
-.brand-list ul li img {
+
+/* .brand-list ul li img {
   height: 105px;
-}
+} */
 .member-img {
   background-repeat: no-repeat;
   background-size: 100% 100%;
@@ -1408,6 +1429,7 @@ custom owl controls
 .steps-wrapper [class^="flaticon-"]::after, 
 .steps-wrapper [class*=" flaticon-"]::after {
     font-size: 60px;
+    color: #742b96;
 }
 .steps-wrapper h4{
     font-size: 17px;
@@ -1416,7 +1438,6 @@ custom owl controls
     color: #000;
 }
 .steps-wrapper p{
-    font-size: 13px;
     font-weight: 300;
     color: #6c6868;
 }
@@ -2356,6 +2377,12 @@ div.qty-section > div > input {
   width: 100%;
   padding: 20px;
 }
+.cart-confirm.is-fixed{
+  position: fixed;
+  width: 28.6%;
+  z-index: 9;
+  top: 0;
+}
 .cart-confirm h2 {
   border-bottom: 1px dashed #ccc;
   color: #575757;
@@ -2439,6 +2466,7 @@ div.qty-section > div > input {
 
 label {
   color: #575757;
+  display: block;
   font-weight: normal;
   text-transform: capitalize;
 }
@@ -2446,7 +2474,9 @@ label {
 .box .section-title-2{
     margin-top: 20px;
 }
-
+.box .form-control .form-control[disabled], 
+.box .form-control[readonly], 
+.box fieldset[disabled] .form-control{ background: #c1c1c1; color: #888; }
 .box .form-control, .box textarea.form-control{
   border-radius: 3px;
   color: #575757;
@@ -2455,7 +2485,15 @@ label {
 }
 .box textarea.form-control{ height: 150px; }
 .box .form-group button { width: 90px; }
-.box .form-group { margin-bottom: 35px; }
+.box .form-group { margin-bottom: 20px; }
+.box .form-group .SumoSelect { width: 100%; }
+.SumoSelect > .CaptionCont{ height: 40px; line-height: 25px; background: #f9f9f9; border-color: #ccc; }
+.box .form-group .SumoSelect > .CaptionCont:hover,
+.box .form-group .SumoSelect > .CaptionCont:active,
+.box .form-group .SumoSelect > .CaptionCont:focus{ border: 1px solid #ccc; }
+.box .form-group .SumoSelect:focus > .CaptionCont, 
+.box .form-group .SumoSelect:hover > .CaptionCont, 
+.box .form-group .SumoSelect.open > .CaptionCont{ outline: none; box-shadow: none; border-color: #ccc; }
 .box .form-group.has-error{ margin-bottom: 0; }
 .tab-content #messages .box .form-group input[type="submit"]{ width: 90% }
 .payment-option {
@@ -2470,7 +2508,9 @@ label {
   width: 100%;
 }
 .box + .payment-option [class*="col-"],
-.box + .payment-option [class^="col-"] { padding-left: 0; }
+.box + .payment-option [class^="col-"] { 
+  /* padding-left: 0;  */
+}
 .payment-option h3 {
   font-weight: normal;
   text-transform: none;
@@ -2493,9 +2533,10 @@ label {
   border: 2px solid #ccc;
   cursor: pointer;
   display: inline-block;
-  height: 120px;
+  height: 90px;
   text-align: center;
-  width: 120px;
+  width: 90px;
+  padding: 5px;
 }
 
 .hide-option .payment-img {
@@ -2523,7 +2564,7 @@ label {
   display: block;
 }
 .showOptions .payment_image label > input:checked + span{ /* (RADIO CHECKED) IMAGE STYLES */
-  border: 1px solid #742b96;
+  border: 2px solid #742b96;
 }
 
 /* toggle switch button */ 
@@ -2715,9 +2756,10 @@ input:checked + .slider:before {
     height: 35px;
 }
 .stockout .qty-section {
-  background: #ddd none repeat scroll 0 0;
-  color: #999;
-  height: auto;
+  background: #e76262 none repeat scroll 0 0;
+  border-radius: 2px;
+  color: #fff;
+  height: 22px;
 }
 .cart-qty .btn-minus, .cart-qty .btn-plus{
     width: 35px;
@@ -3110,4 +3152,23 @@ section.relatedSearch + section { padding-top: 0; }
   padding: 4px 20px;
 }
 .related-keyword .related-keyword-links:hover{ border-color: #742b96; }
+
+/* -------------------------------------
+    New offer
+------------------------------------- */
+.new-offer .offer-image{
+height:300px;
+}
+.offer-cap {
+  background-color: rgba(116,43,150,1);
+  display: inline-block;
+  margin-top: 50px;
+  margin-left: 50px;
+  width: 250px;
+  padding: 30px 10px;
+}
+.offer-cap .color-title{
+  color:#fff;
+}
+
 
