changes upto 31 oct 2017

--- a/public/font/_flaticon.scss
+++ b/public/font/_flaticon.scss
@@ -1,6 +1,6 @@
     /*
     Flaticon icon font: Flaticon
-    Creation date: 29/06/2017 09:38
+    Creation date: 30/10/2017 10:14
     */
 
     @font-face {
@@ -36,24 +36,56 @@
   font-smoothing: antialiased;
     }
 
-    .flaticon-bars:before { content: "\f100"; }
-.flaticon-trolley:before { content: "\f101"; }
-.flaticon-full-items-inside-a-shopping-bag:before { content: "\f102"; }
-.flaticon-list:before { content: "\f103"; }
-.flaticon-valentines-heart:before { content: "\f104"; }
-.flaticon-like:before { content: "\f105"; }
-.flaticon-search:before { content: "\f106"; }
-.flaticon-money-bag:before { content: "\f107"; }
-.flaticon-online-shopping-cart:before { content: "\f108"; }
-.flaticon-down-arrow:before { content: "\f109"; }
+    .flaticon-teacher-reading-sitting-on-a-chair:before { content: "\f100"; }
+.flaticon-hand-shake:before { content: "\f101"; }
+.flaticon-bars:before { content: "\f102"; }
+.flaticon-valentines-heart:before { content: "\f103"; }
+.flaticon-padlock:before { content: "\f104"; }
+.flaticon-document:before { content: "\f105"; }
+.flaticon-ring:before { content: "\f106"; }
+.flaticon-image:before { content: "\f107"; }
+.flaticon-home:before { content: "\f108"; }
+.flaticon-star:before { content: "\f109"; }
+.flaticon-user-1:before { content: "\f10a"; }
+.flaticon-user:before { content: "\f10b"; }
+.flaticon-users:before { content: "\f10c"; }
+.flaticon-people:before { content: "\f10d"; }
+.flaticon-engineer:before { content: "\f10e"; }
+.flaticon-scroll-arrow-to-down:before { content: "\f10f"; }
+.flaticon-online-shopping-cart:before { content: "\f110"; }
+.flaticon-money-bag:before { content: "\f111"; }
+.flaticon-search:before { content: "\f112"; }
+.flaticon-like:before { content: "\f113"; }
+.flaticon-full-items-inside-a-shopping-bag:before { content: "\f114"; }
+.flaticon-list:before { content: "\f115"; }
+.flaticon-trolley:before { content: "\f116"; }
+.flaticon-file-2:before { content: "\f117"; }
+.flaticon-file:before { content: "\f118"; }
+.flaticon-file-1:before { content: "\f119"; }
     
-    $font-Flaticon-bars: "\f100";
-    $font-Flaticon-trolley: "\f101";
-    $font-Flaticon-full-items-inside-a-shopping-bag: "\f102";
-    $font-Flaticon-list: "\f103";
-    $font-Flaticon-valentines-heart: "\f104";
-    $font-Flaticon-like: "\f105";
-    $font-Flaticon-search: "\f106";
-    $font-Flaticon-money-bag: "\f107";
-    $font-Flaticon-online-shopping-cart: "\f108";
-    $font-Flaticon-down-arrow: "\f109";
+    $font-Flaticon-teacher-reading-sitting-on-a-chair: "\f100";
+    $font-Flaticon-hand-shake: "\f101";
+    $font-Flaticon-bars: "\f102";
+    $font-Flaticon-valentines-heart: "\f103";
+    $font-Flaticon-padlock: "\f104";
+    $font-Flaticon-document: "\f105";
+    $font-Flaticon-ring: "\f106";
+    $font-Flaticon-image: "\f107";
+    $font-Flaticon-home: "\f108";
+    $font-Flaticon-star: "\f109";
+    $font-Flaticon-user-1: "\f10a";
+    $font-Flaticon-user: "\f10b";
+    $font-Flaticon-users: "\f10c";
+    $font-Flaticon-people: "\f10d";
+    $font-Flaticon-engineer: "\f10e";
+    $font-Flaticon-scroll-arrow-to-down: "\f10f";
+    $font-Flaticon-online-shopping-cart: "\f110";
+    $font-Flaticon-money-bag: "\f111";
+    $font-Flaticon-search: "\f112";
+    $font-Flaticon-like: "\f113";
+    $font-Flaticon-full-items-inside-a-shopping-bag: "\f114";
+    $font-Flaticon-list: "\f115";
+    $font-Flaticon-trolley: "\f116";
+    $font-Flaticon-file-2: "\f117";
+    $font-Flaticon-file: "\f118";
+    $font-Flaticon-file-1: "\f119";
