--- a/public/css/dashboard/dashboard-style.css
+++ b/public/css/dashboard/dashboard-style.css
@@ -158,7 +158,7 @@ Dashboard Left Sidebar
     margin-right: 8px;
     font-size: 20px;
 }
-
+.cd-side-nav > ul > li.has-children a i:before{ margin-left: 5px; }
 /* -------------------------------- 
 
 Dashboard Content
