--- a/public/font/flaticon.css
+++ b/public/font/flaticon.css
@@ -1,6 +1,6 @@
 	/*
   	Flaticon icon font: Flaticon
-  	Creation date: 29/06/2017 09:38
+  	Creation date: 30/10/2017 10:14
   	*/
 
 @font-face {
@@ -24,17 +24,34 @@
 [class^="flaticon-"]:before, [class*=" flaticon-"]:before,
 [class^="flaticon-"]:after, [class*=" flaticon-"]:after {   
   font-family: Flaticon;
-  font-size: 20px;
-  font-style: normal;
+        font-size: 20px;
+font-style: normal;
+margin-left: 20px;
 }
 
-.flaticon-bars:before { content: "\f100"; }
-.flaticon-trolley:before { content: "\f101"; }
-.flaticon-full-items-inside-a-shopping-bag:before { content: "\f102"; }
-.flaticon-list:before { content: "\f103"; }
-.flaticon-valentines-heart:before { content: "\f104"; }
-.flaticon-like:before { content: "\f105"; }
-.flaticon-search:before { content: "\f106"; }
-.flaticon-money-bag:before { content: "\f107"; }
-.flaticon-online-shopping-cart:before { content: "\f108"; }
-.flaticon-down-arrow:before { content: "\f109"; }
+.flaticon-teacher-reading-sitting-on-a-chair:before { content: "\f100"; }
+.flaticon-hand-shake:before { content: "\f101"; }
+.flaticon-bars:before { content: "\f102"; }
+.flaticon-valentines-heart:before { content: "\f103"; }
+.flaticon-padlock:before { content: "\f104"; }
+.flaticon-document:before { content: "\f105"; }
+.flaticon-ring:before { content: "\f106"; }
+.flaticon-image:before { content: "\f107"; }
+.flaticon-home:before { content: "\f108"; }
+.flaticon-star:before { content: "\f109"; }
+.flaticon-user-1:before { content: "\f10a"; }
+.flaticon-user:before { content: "\f10b"; }
+.flaticon-users:before { content: "\f10c"; }
+.flaticon-people:before { content: "\f10d"; }
+.flaticon-engineer:before { content: "\f10e"; }
+.flaticon-scroll-arrow-to-down:before { content: "\f10f"; }
+.flaticon-online-shopping-cart:before { content: "\f110"; }
+.flaticon-money-bag:before { content: "\f111"; }
+.flaticon-search:before { content: "\f112"; }
+.flaticon-like:before { content: "\f113"; }
+.flaticon-full-items-inside-a-shopping-bag:before { content: "\f114"; }
+.flaticon-list:before { content: "\f115"; }
+.flaticon-trolley:before { content: "\f116"; }
+.flaticon-file-2:before { content: "\f117"; }
+.flaticon-file:before { content: "\f118"; }
+.flaticon-file-1:before { content: "\f119"; }
